# clispec-cli

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
schemas/: v0.1.json  v0.2.json
src/: display.rs  help.rs  main.rs  runner.rs  schema_cmd.rs  scorer.rs
src/checks/: bounded.rs  idempotent.rs  interactive.rs  mod.rs  output.rs  schema.rs  streams.rs
tests/: integration.rs
