[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "clispec"
dynamic = ["version"]
description = "Score CLI tools against The CLI Spec"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Ruben J. Jongejan", email = "ruben.jongejan@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://clispec.dev"
Repository = "https://github.com/rvben/clispec-cli"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
strip = true
